--- a/roles/init/templates/rsyslog.conf
+++ b/roles/init/templates/rsyslog.conf
@@ -5,4 +5,5 @@ $ActionQueueSaveOnShutdown on # save in-memory data if rsyslog shuts down
 $ModLoad imudp #loads the udp module  
 $UDPServerAddress localhost 
 $UDPServerRun 514 
-*.* @davidayson8-3:6514;RSYSLOG_SyslogProtocol23Format
+*.* @influxdb:6514;RSYSLOG_SyslogProtocol23Format
+ 
