--- a/roles/keepalived/templates/keepalived.conf
+++ b/roles/keepalived/templates/keepalived.conf
@@ -3,7 +3,7 @@ vrrp_script check_haproxy {
     weight 20                              
     interval 1               
 }
-vrrp_instance XXX {             
+vrrp_instance {{ domain_name }} {             
     interface ens3
     virtual_router_id 52
     {% if inventory_hostname == 'davidayson8-1' %}
