--- a/roles/keepalived/tasks/main.yaml
+++ b/roles/keepalived/tasks/main.yaml
@@ -26,6 +26,7 @@
     src: keepalived.conf
     dest: /etc/keepalived/keepalived.conf
     mode: '0644'
+  notify: Restart keepalived
   no_log: true
 
 - name: Ensure Keepalived is enabled and started
