--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -77,6 +77,7 @@
     password: "{{ backup_password }}"
     priv: "{{ mysql_database }}.*: SELECT, LOCK TABLES, SELECT"
     login_unix_socket: /var/run/mysqld/mysqld.sock
+    host: "{{ mysql_backup_host }}"
     state: present
   no_log: true
 
