--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -75,10 +75,9 @@
   community.mysql.mysql_user:
     name: "{{ backup_user }}"
     password: "{{ backup_password }}"
-    priv: "{{ mysql_database }}.*: SELECT, LOCK TABLES, SELECT"
+    priv: "{{ mysql_database }}.*:LOCK TABLES, SELECT"
     login_unix_socket: /var/run/mysqld/mysqld.sock
-    host: "{{ mysql_backup_host }}"
-    state: present
+    host: "{{ inventory_hostname }}"
   no_log: true
 
 - name: Create backup template
